fixes for modals and home screen on mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,8 +14,13 @@
 @import "font-awesome/font-awesome";
 
 body {
-  padding-top: 50px;
+  padding-right: 0px !important
 }
+
+.modal-open {
+  overflow-y: auto;
+}
+
 h1,
 .navbar-brand {
   font-family: 'Audiowide', cursive;
